# bmg

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: config.py  elements.py  main.py  root.py  utils.py
src/assets/: .env.example  index.html
src/assets/images/: Gemini_Generated_Image_p3mitgp3mitgp3mi.xcf
src/config/: app.py  style.py
src/games/: next_number.py  tic_tac_toe.py
src/games/cities/: abstract.py  cities.py  logic.py  types.py  utils.py
src/games/cities/database/: blacklists.py  db.py  normalised.py
src/games/cities/database/cities/: a_ua.py  b_ua.py  ch_ua.py  d_ua.py  e_ua.py  f_ua.py  g_ua.py  ge_ua.py  i_ua.py  j_ua.py  k_ua.py  kh_ua.py  l_ua.py  m_ua.py  n_ua.py  o_ua.py  p_ua.py  r_ua.py  s_ua.py  sh_ua.py  shch_ua.py  t_ua.py  ts_ua.py  u_ua.py  v_ua.py  ya_ua.py  ye_ua.py  yi_ua.py  yu_ua.py  z_ua.py  zh_ua.py
src/games/next_namber/: abstract.py  logic.py  next_number.py
src/games/tic_tac_toe/: abstract.py  constants.py  logic.py  tic_tac_toe.py
src/routes/: about.py  author.py  error404.py  root.py  settings.py
src/routs/: about.py  root.py
src/utils/: config.py  constants.py  elements.py  exceptions.py  measurement_api.py  storage.py  utils.py
