[project]
name = "minigames"
version = "1.2.9"
description = "Bogdanovych's MiniGames"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Andrii Bogdanovych", email = "ab@foundation101.org" }
]

dependencies = [
    "flet==0.84.0",
    "flet-storage==1.1.3",
    "httpx==0.28.1",
    "pydantic-settings==2.14.0",
    "pydantic==2.13.3",
]

[dependency-groups]
dev = [
    "flet-desktop==0.84.0",    # Необхідно для роботи через web
    "flet-web==0.84.0",        # Необхідно для роботи через web
    "flet-cli==0.84.0",        # Необхідно для роботи через web
    "flet-desktop-light",
    "pre_commit",
    "black",
    "isort",
]

[tool.flet]
org = "org.foundation101"
product = "Мініігри"
company = "NGO Foundation.101"
copyright = "Copyright (C) 2026 by NGO Foundation.101"

[tool.flet.app]
path = "src"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py312']
skip-string-normalization = true

[tool.isort]
profile = "black"
