[project]
name = "minigames"
version = "1.3.3"
description = "Bogdanovych's MiniGames"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Andrii Bogdanovych", email = "ab@foundation101.org" }
]

dependencies = [
    "flet==0.85.1",
    "flet-storage==1.1.3",
    "httpx==0.28.1",
    "pydantic-settings==2.14.1",
    "pydantic==2.13.4",
    "measurement-api==0.2.0",
]

[dependency-groups]
dev = [
    "flet-desktop==0.85.1",
    "flet-web==0.85.1",
    "flet-cli==0.85.1",
    "pre_commit",
    "ruff",
]

[tool.flet]
org = "org.foundation101"
product = "Мініігри"
company = "NGO Foundation.101"
copyright = "Copyright (C) 2026 by NGO Foundation.101"

[tool.flet.app]
path = "src"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "preserve"
